# descartex-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd  build.sh
app/: entry.c  entry.h
drivers/: st7789v.c  st7789v.h
env/: macos.sh
init/: main.c
util/: log.c  log.h  time.h  types.h  util.h
